Style scrollbar on body to invisible keeping functionality, fix contrast on contact form submit button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,6 +106,11 @@ body {
     background-color: rgb(173, 128, 91, .7);
     color: var(--clr-dark);
     line-height: 1.6;
+    overflow: scroll;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 /* Ease of Access */
@@ -1376,8 +1381,8 @@ textarea {
 
 .btn {
     display: block;
-    background-color: var(--clr-main);
-    color: var(--clr-dark);
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
     text-transform: uppercase;
     font-size: 1rem;
     font-weight: 800;
@@ -1391,8 +1396,8 @@ textarea {
 
 .btn:hover,
 .btn:focus {
-    background-color: var(--clr-dark);
-    color: var(--clr-main);
+    background-color: rgb(173, 128, 91, .7);
+    color: var(--clr-dark);
 }
 
 @media only screen and (min-width: 23.4375em) {
